2002-11-12  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03408] fix Bug#87472
	    MOUSE_SCROLL_LINE should be a run-time option
	* fm.h (relative_wheel_scroll): added
		(fixed_wheel_scroll_count): added
		(relative_wheel_scroll_ratio): added
	* main.c (mouse_scroll_line): added
		(process_mouse): s/MOUSE_SCROLL_LINE/mouse_scroll_line()/
	* menu.c (MOUSE_SCROLL_LINE): deleted
	* terms.h (MOUSE_SCROLL_LINE): deleted
	* rc.c (CMT_RELATIVE_WHEEL_SCROLL): added
		(CMT_RELATIVE_WHEEL_SCROLL_RATIO): added
		(CMT_FIXED_WHEEL_SCROLL_COUNT): added
		(wheelmode): added
		(params3): add relative_wheel_scroll,
				relative_wheel_scroll_ratio,
				fixed_wheel_scroll_count
	* NEWS: updated

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03407] char GlobalKeymap -> unsigned char GlobalKeymap
	* fm.h (GlobalKeymap): char->unsigned char
		(EscKeymap): ditto
		(EscBKeymap): ditto
		(EscDKeymap): ditto
		(PcKeymap): ditto
	* keybind.c: ditto
	* keybind_lynx.c: ditto

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03406]
	* scripts/Makefile: add AUXBIN_DIR
			update LIB_DIR, HELP_DIR
			xface2xpm installed in AUXBIN_DIR
	* scripts/multipart/Makefile: update LIB_DIR
	* scripts/w3mman/Makefile: update LIB_DIR

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03405] Re: tab browser
	* main.c (moveTab): B_FORCE_REDRAW

2002-11-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03401] w3mhelp.cgi
	* proto.h (tabMn): nulcmd ifndef USE_MENU
	* scripts/w3mhelp-funcdesc.en.pl.in: add LINEEDIT:EDITOR
	* scripts/w3mhelp-funcdesc.ja.pl.in: add LINEEDIT:EDITOR
					Tab operation
	* scripts/w3mhelp-funcname.pl.in: add LINEEDIT:EDITOR C-o
	* scripts/w3mhelp.cgi.in: add tabA in Hyperlink operation
				add tabURL, tabrURL in File/Stream operation
				add Tab operation
				add lineedit_editor in Line edit mode
	
2002-11-10  NOMIYA Masaru <nomiya@ttmy.ne.jp>

	* [w3m-dev 03399]
	* XMakefile: ;; -> ;
